# dating_bot

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: flake8_linter.yml
common/protos/: matching.proto  matching_pb2.py  matching_pb2_grpc.py
components/ai_service/: main.py  migrate.py  models.py  repositories.py
components/api_gateway/: config.py  di.py  main.py  utils.py
components/api_gateway/configs/: app.docker.toml  app.toml
components/api_gateway/controllers/: matching.py
components/api_gateway/controllers/bot/: app.py  handlers.py  keyboards.py  middlewares.py  states.py
components/matching_service/: config.py  di.py  main.py  models.py  rabbit.py  repositories.py  routers.py  schemas.py  services.py
components/matching_service/configs/: app.docker.toml  app.toml
components/notification_service/: celeryconfig.py  config.py  di.py  main.py  poll_likes.py  poll_matches.py  startup.sh
components/notification_service/configs/: app.docker.toml  app.toml
components/profile_service/: config.py  dependencies.py  di.py  main.py  minio_utils.py  models.py  repositories.py  routers.py  schemas.py
components/profile_service/configs/: app.docker.toml  app.toml
components/protos/: matching_pb2.pyi  matching_pb2_grpc.py
components/rating_service/: config.py  di.py  main.py  models.py  repositories.py  routers.py  schemas.py  services.py
components/rating_service/configs/: app.docker.toml  app.toml
grafana/provisioning/dashboards/: dating_bot_dashboard.json
prometheus/: prometheus.yml
