[project]
name = "dating-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "asyncpg>=0.30.0",
    "boto3>=1.38.0",
    "dishka>=1.5.2",
    "fastapi>=0.115.12",
    "greenlet>=3.1.1",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "toml>=0.10.2",
    "uvicorn>=0.34.1",
]
