[project]
name = "dating-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.5",
    "aiogram>=3.20.0.post0",
    "asyncpg>=0.30.0",
    "boto3>=1.38.0",
    "celery>=5.5.1",
    "dishka>=1.5.2",
    "fastapi>=0.115.12",
    "geopy>=2.4.1",
    "greenlet>=3.1.1",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "httpx>=0.28.1",
    "msgpack>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "toml>=0.10.2",
    "uvicorn>=0.34.1",
]
