[project]
name = "dating-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.5",
    "aiochclient>=2.6.0",
    "aiogram>=3.20.0.post0",
    "asyncpg>=0.30.0",
    "boto3>=1.38.0",
    "celery>=5.5.1",
    "clickhouse-connect>=0.8.17",
    "dishka>=1.5.2",
    "fastapi>=0.115.12",
    "flake8>=7.2.0",
    "geoalchemy2[shapely]>=0.17.1",
    "geopy>=2.4.1",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "msgpack>=1.1.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.40",
    "toml>=0.10.2",
    "uvicorn>=0.34.1",
]
